--- a/scss/game/front/mainCharacter.scss
+++ b/scss/game/front/mainCharacter.scss
@@ -1,3 +1,6 @@
+@import "../animations";
+
+
 .main-character-container {
   position: relative;
   width: 100vw;
@@ -32,28 +35,23 @@
 
   .main-character-text-container {
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 12.5%;
+    transform: translateY(-50%);
     width: 40%;
     font-family: 'Kanit', sans-serif;
     color: white;
 
     > h1 {
-      font-family: 'Kanit', sans-serif;
+      @include headerTitle;
       color: white;
       padding-bottom: 0.2rem;
-      border-bottom: 0.2rem solid $pink-color;
       overflow: hidden;
-      font-size: 48px;
-      font-weight: 600;
     }
 
     > p {
-      font-family: 'Kanit', sans-serif;
-      letter-spacing: 0.1rem;
-      font-size: 1.1rem;
+      @include contentText;
       text-align: start;
-      color: white;
 
       .features-container {
         position: absolute;
