--- a/scss/game/front/news.scss
+++ b/scss/game/front/news.scss
@@ -1,9 +1,14 @@
 @import "../mixins";
+@import "../variables";
+@import "../animations";
 
 .latest-news-container {
   @include flex-rules(column, center, center);
   margin: 0 2rem;
   overflow-y: hidden;
+  //animation: onLoad 1s linear;
+  //animation-duration: 1ms;
+  //animation-timeline: scroll(axis inset);
 
   .title-container {
     width: 90%;
@@ -11,11 +16,8 @@
     overflow-y: hidden;
 
     > h3 {
+      @include headerTitleCenter;
       width: fit-content;
-      font-size: 48px;
-      font-weight: 600;
-      font-family: Kanit, serif;
-      border-bottom: 0.3rem solid $pink-color;
     }
   }
 
@@ -32,11 +34,13 @@
       transition: 0.25s linear;
       cursor: pointer;
       overflow-y: hidden;
+      border: 5px solid black;
 
       &:hover {
-        -webkit-transform: translateY(-50px);
-        transform: translateY(-30px);
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
         box-shadow: 0 0 1rem 1rem inset;
+        border: 5px solid $pink-color;
       }
 
       > img {
@@ -56,6 +60,7 @@
         .header {
           @include flex-rules(row, center, center);
           width: 100%;
+          font-family: Kanit, serif;
           justify-content: space-between;
           overflow-y: hidden;
 
@@ -63,7 +68,7 @@
             color: black;
             font-weight: bold;
             font-family: Kanit, serif;
-            margin: 0 1rem;
+            margin: 1vw 1.5vw 0;
 
             &:nth-child(2) {
               color: $pink-color;
@@ -72,18 +77,23 @@
         }
 
         .content {
-          margin: 0 1rem;
+          margin: 0 1vw;
           color: black;
           overflow-y: hidden;
 
           > h3 {
-            margin: 2rem 0 0 0;
+            margin: 1vw 0 0 0.5vw;
+            font-family: Kanit, serif;
+            font-size: 24px;
+            font-weight: 500;
           }
 
           > p {
             font-weight: normal;
+            font-family: Kanit, serif;
             line-height: 20px;
             font-size: 14px;
+            margin: 0.5vw 0.5vw 0;
           }
         }
       }
