--- a/scss/game/game.css
+++ b/scss/game/game.css
@@ -42,6 +42,16 @@
     border-bottom-width: 100%;
   }
 }
+@keyframes onLoad {
+  from {
+    opacity: 0;
+    transform: translateY(10%);
+  }
+  to {
+    opacity: 100%;
+    transform: translateY(0);
+  }
+}
 * {
   margin: 0;
   padding: 0;
